@@ -20,7 +20,8 @@ public class PredictionEngine {
     public void addPoint(long tick, int exploredCells) {
         coveragePoints.add(new long[]{tick, exploredCells});
         while (coveragePoints.size() > MAX_POINTS) {
-            coveragePoints.removeFirst();
+            // Integration note: JDK 17 compatible replacement for List.removeFirst().
+            coveragePoints.remove(0);
         }
     }
 
@@ -81,7 +82,8 @@ public class PredictionEngine {
             return result;
         }
 
-        long[] latest = points.getLast();
+        // Integration note: JDK 17 compatible replacement for List.getLast().
+        long[] latest = points.get(points.size() - 1);
         long latestTick = latest[0];
         int latestExploredCells = (int) latest[1];
 
